PB-6140 - Regression: CSS glitch create/edit group dialog the role is too long in french and prevent deleting user in group

--- a/src/less/components/permission/permissions.less
+++ b/src/less/components/permission/permissions.less
@@ -24,6 +24,8 @@
             font-size: .813em;
             padding: .875em .5em .5em .875em;
             border-bottom: 1px dotted @border-default;
+            display: flex;
+            align-items: center;
 
             &:last-child {
                 border: 0;
@@ -37,7 +39,8 @@
                 float: left;
             }
             .aro {
-                width: 48%;
+                flex: 1 1 auto;
+                width: 40%;
                 float: left;
                 padding: 0 1em;
                 .aro-details {
@@ -63,7 +66,7 @@
             .rights {
                 float: left;
                 margin-top: .5em;
-                width: 27%;
+                flex: 0 1 auto;
                 select {
                     margin: 0;
                     font-size: 1em;
@@ -78,7 +81,7 @@
                 padding:.625em;
                 width:1em;
                 height:1em;
-                margin-top:.125em;
+                margin-top:.2em;
 
                 /* hover */
                 &:hover {
